--- a/build.gradle
+++ b/build.gradle
@@ -24,9 +24,10 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation('org.springframework.boot:spring-boot-starter-web') {
+        exclude module: 'spring-boot-starter-security'
+    }
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
     implementation "org.ktorm:ktorm-core:${ktormVersion}"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.8.0'
@@ -35,6 +36,7 @@ dependencies {
     implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
     implementation 'com.fasterxml.jackson.core:jackson-databind'
     implementation 'org.postgresql:postgresql'
+    implementation 'org.postgis:postgis-jdbc:1.3.3'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 }
