--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
     implementation 'com.fasterxml.jackson.core:jackson-databind'
+    implementation 'org.springframework.security:spring-security-crypto:6.2.3'
+    implementation 'org.bouncycastle:bcprov-jdk15on:1.70'
     implementation 'org.postgresql:postgresql'
     implementation 'org.postgis:postgis-jdbc:1.3.3'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
