--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,11 @@ dependencies {
     implementation 'org.springframework.security:spring-security-crypto:6.2.3'
     implementation 'org.bouncycastle:bcprov-jdk15on:1.70'
     implementation 'org.postgresql:postgresql'
+    implementation("io.jsonwebtoken:jjwt-api:0.12.3")
+    implementation("io.jsonwebtoken:jjwt-impl:0.12.3")
+    implementation("io.jsonwebtoken:jjwt-jackson:0.12.3")
+    implementation("org.springframework.boot:spring-boot-starter-security")
+    testImplementation("org.springframework.security:spring-security-test")
     implementation 'org.postgis:postgis-jdbc:1.3.3'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
