--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.datasource.url=${DB_URL}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
+jwt.key=${JWT_KEY}
+jwt.access-token-expiration=3600000
+jwt.refresh-token-expiration=86400000
