--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
-spring.datasource.url=${DB_URL}
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=${DB_USERNAME}
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 jwt.key=${JWT_KEY}
 jwt.access-token-expiration=3600000
 jwt.refresh-token-expiration=86400000
+server.port=9797
